k8s/db-manifest.yaml

# DB-Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres-db
        image: postgres:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "0.2"
        imagePullPolicy: IfNotPresent
        ports:
        - protocol: TCP
          containerPort: 5432
---

# DB-Service
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector: 
    app: postgres-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
